add payment service swagger
