# pkg/response/response.go
@@ -1,0 +1,9 @@
+package response
+
+type SuccessResponse struct {
+	Message string `json:"message"`
+}
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
