# services/payment/internal/handlers/payment_handler.go
@@ -3,6 +3,7 @@ package handlers
 import (
 	"net/http"
 	"payment/internal/service"
+	_ "pkg/response"
 
 	"github.com/gin-gonic/gin"
 )
@@ -20,6 +21,17 @@ func NewPaymentHandler(service *service.PaymentService) *PaymentHandler {
 	return &PaymentHandler{service: service}
 }
 
+// Pay godoc
+// @Summary      Оплатить со счёта пользователя
+// @Description  Регистрирует платёж и отправляет его на обработку
+// @Tags         payment
+// @Accept       json
+// @Produce      json
+// @Param        request body handlers.PaymentRequest true "Данные платежа"
+// @Success      201  {object}  response.SuccessResponse
+// @Failure      400  {object}  response.ErrorResponse
+// @Failure      500  {object}  response.ErrorResponse
+// @Router       /pay [post]
 func (h *PaymentHandler) Pay(c *gin.Context) {
 	var req PaymentRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
